--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link type="text/html" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+
 </head>
 <body>
+    <script type="application/json" src="js/materialize.min.js"></script>
   <app-root></app-root>
 </body>
 </html>
